export plots review

--- a/notebooks/Frequenzmodulation.ipynb
+++ b/notebooks/Frequenzmodulation.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -54,6 +54,14 @@
       "[ 893238.4341637  1403692.17081851 2091859.43060498 2798932.38434164\n",
       " 4247108.54092527 4946619.21708185 5585631.67259786]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "(4597.719323336908, -4714.966321547444, 6902.900465043267, -7020.756345385652)"
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -133,9 +141,10 @@
     "ax.scatter(b_i(currents[currents < 0])*1e3, np.array(zeeman_freqs_2[currents < 0])  * 1e-6)\n",
     "\n",
     "ax.set(xlabel='$B / \\mathrm{mT}$', ylabel=' f_\\mathrm{RF} / \\mathrm{MHz}')\n",
-    "slope_1, slope_2\n",
+    "\n",
     "ax.grid()\n",
-    "fig.savefig('../output/freq_modulation.svg')\n"
+    "fig.savefig('../output/lin_reg_freq_modulation.svg')\n",
+    "slope_1, slope_2, slope_3, slope_4"
    ],
    "metadata": {
     "collapsed": false
@@ -155,19 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
-      "text/plain": "(3.284966320850206e-07,\n -3.3687366454951784e-07,\n 4.931966035584539e-07,\n -5.01617139272189e-07)"
+      "text/plain": "array([ 0.32849663, -0.33687366,  0.4931966 , -0.50161714])"
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gf(slope_1), gf(slope_2), gf(slope_3), gf(slope_4)"
+    "np.array((gf(slope_1), gf(slope_2), gf(slope_3), gf(slope_4))) * 1e6"
    ],
    "metadata": {
     "collapsed": false
